# vodozemac-bindings

cpp/: Cargo.toml
javascript/: Cargo.toml
python/: Cargo.toml
python/src/: account.rs  group_sessions.rs  session.rs
