[package]
name = "vodozemac-javascript"
version = "0.1.0"
edition = "2021"

[lib]
name = "vodozemac"
crate-type = ["cdylib"]

[dependencies.vodozemac]
git = "https://github.com/matrix-org/vodozemac"
rev = "92d6acca73b619a28440003f22c89b4127dd3fdb"
features = ["js"]

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
serde-wasm-bindgen = "0.4.2"
