[package]
name = "vodozemac-python"
version = "0.7.0"
edition = "2021"

[lib]
name = "vodozemac"
crate-type = ["cdylib"]

[dependencies]
paste = "1.0.7"
thiserror = "1.0.30"

[package.metadata.maturin]
name = "vodozemac"

[dependencies.vodozemac]
git = "https://github.com/matrix-org/vodozemac"
rev = "92d6acca73b619a28440003f22c89b4127dd3fdb"

[dependencies.pyo3]
version = "0.16.4"
features = ["extension-module"]
